# qt-preview-demo

./: CMakeLists.txt  README.md
boost_test/: CMakeLists.txt  asio_usage.hpp  filesystem_usage.hpp  json_usage.hpp  main.cpp  process_usage.hpp
chrome_tabbar_style/: tabbarstyle.cpp  tabbarstyle.h
click_water_ripples/: CMakeLists.txt  click_ripple_listview.cpp  click_ripple_listview.h  click_water_ripple_widget.cpp  click_water_ripple_widget.h  main.cpp  widget.cpp  widget.h
demo_thread_pool/: CMakeLists.txt  main.cpp  task_queue.hpp  thread_pool.hpp
embed_window_qt/: CMakeLists.txt  add_modify_cfg_dialog.cpp  add_modify_cfg_dialog.h  add_modify_cfg_dialog.ui  app_settings.cpp  app_settings.h  data_def.cpp  data_def.h  existed_cfg_dialog.cpp  existed_cfg_dialog.h  existed_cfg_dialog.ui  main.cpp  res.qrc  widget.cpp  widget.h  widget.ui  windows_helper.hpp
embed_window_qt/resource/config/: processConfig.json
qpainter-drawings/: CMakeLists.txt  bagua.h  main.cpp  res.qrc  widget.cpp  widget.h
qpainter-drawings/resource/: zh_CN.ts
qpainter_drawings/: CMakeLists.txt  bagua.cpp  bagua_round.cpp  bagua_round.h  bagua_round_thread.cpp  bagua_round_thread.h  cplusplus_logo.cpp  cplusplus_logo.h  hourglass.cpp  hourglass.h  main.cpp  oval_seal.cpp  oval_seal.h  res.qrc  speedometer.cpp  speedometer.h  widget.cpp  widget.h  wifi_logo.cpp  wifi_logo.h  win10_loading_progress.h
qpainter_drawings/progress/: ball_stair_progress.cpp  ball_stair_progress.h  four_fish_progress.cpp  four_fish_progress.h  nine_ball_progress.cpp  nine_ball_progress.h  water_progress.cpp  water_progress.h  win10_loading_progress.cpp
qprocess_usage/: CMakeLists.txt  main.cpp  process_manager.cpp  process_manager.h
